--- a/WebsiteApp/src/styles.scss
+++ b/WebsiteApp/src/styles.scss
@@ -1,14 +1,12 @@
 @use '@angular/material' as mat;
 
-$my-custom-level: mat.define-typography-level(
-  $font-family: Roboto,
-  $font-weight: 400,
-  $font-size: 1rem,
-  $line-height: 1,
-  $letter-spacing: normal,
+$custom-typography: mat.define-typography-config(
+  $headline:  mat.define-typography-level(
+    $font-family: Roboto,
+    $font-weight: 400,
+    $font-size: 2rem,
+    $letter-spacing: normal,
+  ),
 );
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
+@include mat.core($custom-typography);
